sd-core/src/snapshots/sd_core__graph__tests__basic_program.snap
---
source: sd-core/src/graph.rs
expression: graph
---
Hypergraph(
  nodes: {
    0: NodeInfo(
      data: Input,
      inputs: [],
      outputs: [],
    ),
    1: NodeInfo(
      data: Weight(Passive(Int(1))),
      inputs: [],
      outputs: [
        {
          Port(
            node: NodeIndex(2),
            index: PortIndex(0),
          ): Strong,
        },
      ],
    ),
    2: NodeInfo(
      data: Output,
      inputs: [
        (Port(
          node: NodeIndex(1),
          index: PortIndex(0),
        ), Strong),
      ],
      outputs: [],
    ),
  },
)
