sd-core/src/snapshots/sd_core__graph__tests__environment-7.snap
---
source: sd-core/src/graph.rs
expression: "env.map[&None].free.iter().copied().cloned().collect::<HashSet<_>>()"
---
{
    Variable(
        "y",
    ),
    Variable(
        "z",
    ),
}
