sd-core/src/snapshots/sd_core__graph__tests__fact.snap
---
source: sd-core/src/graph.rs
expression: graph
---
Hypergraph(
  nodes: {
    0: NodeInfo(
      data: Input,
      inputs: [],
      outputs: [],
    ),
    1: NodeInfo(
      data: Thunk(
        args: 1,
        body: Hypergraph(
          nodes: {
            0: NodeInfo(
              data: Input,
              inputs: [],
              outputs: [
                {
                  Port(
                    node: NodeIndex(1),
                    index: PortIndex(0),
                  ): Strong,
                },
              ],
            ),
            1: NodeInfo(
              data: Thunk(
                args: 1,
                body: Hypergraph(
                  nodes: {
                    0: NodeInfo(
                      data: Input,
                      inputs: [],
                      outputs: [
                        {
                          Port(
                            node: NodeIndex(5),
                            index: PortIndex(0),
                          ): Strong,
                        },
                        {
                          Port(
                            node: NodeIndex(2),
                            index: PortIndex(0),
                          ): Strong,
                          Port(
                            node: NodeIndex(4),
                            index: PortIndex(0),
                          ): Strong,
                          Port(
                            node: NodeIndex(6),
                            index: PortIndex(0),
                          ): Strong,
                        },
                      ],
                    ),
                    1: NodeInfo(
                      data: Weight(Passive(Int(1))),
                      inputs: [],
                      outputs: [
                        {
                          Port(
                            node: NodeIndex(2),
                            index: PortIndex(1),
                          ): Strong,
                        },
                      ],
                    ),
                    2: NodeInfo(
                      data: Weight(Active(Eq)),
                      inputs: [
                        (Port(
                          node: NodeIndex(0),
                          index: PortIndex(1),
                        ), Strong),
                        (Port(
                          node: NodeIndex(1),
                          index: PortIndex(0),
                        ), Strong),
                      ],
                      outputs: [
                        {
                          Port(
                            node: NodeIndex(8),
                            index: PortIndex(0),
                          ): Strong,
                        },
                      ],
                    ),
                    3: NodeInfo(
                      data: Weight(Passive(Int(1))),
                      inputs: [],
                      outputs: [
                        {
                          Port(
                            node: NodeIndex(4),
                            index: PortIndex(1),
                          ): Strong,
                        },
                      ],
                    ),
                    4: NodeInfo(
                      data: Weight(Active(Minus)),
                      inputs: [
                        (Port(
                          node: NodeIndex(0),
                          index: PortIndex(1),
                        ), Strong),
                        (Port(
                          node: NodeIndex(3),
                          index: PortIndex(0),
                        ), Strong),
                      ],
                      outputs: [
                        {
                          Port(
                            node: NodeIndex(5),
                            index: PortIndex(1),
                          ): Strong,
                        },
                      ],
                    ),
                    5: NodeInfo(
                      data: Weight(Active(App)),
                      inputs: [
                        (Port(
                          node: NodeIndex(0),
                          index: PortIndex(0),
                        ), Strong),
                        (Port(
                          node: NodeIndex(4),
                          index: PortIndex(0),
                        ), Strong),
                      ],
                      outputs: [
                        {
                          Port(
                            node: NodeIndex(6),
                            index: PortIndex(1),
                          ): Strong,
                        },
                      ],
                    ),
                    6: NodeInfo(
                      data: Weight(Active(Times)),
                      inputs: [
                        (Port(
                          node: NodeIndex(0),
                          index: PortIndex(1),
                        ), Strong),
                        (Port(
                          node: NodeIndex(5),
                          index: PortIndex(0),
                        ), Strong),
                      ],
                      outputs: [
                        {
                          Port(
                            node: NodeIndex(8),
                            index: PortIndex(2),
                          ): Strong,
                        },
                      ],
                    ),
                    7: NodeInfo(
                      data: Weight(Passive(Int(1))),
                      inputs: [],
                      outputs: [
                        {
                          Port(
                            node: NodeIndex(8),
                            index: PortIndex(1),
                          ): Strong,
                        },
                      ],
                    ),
                    8: NodeInfo(
                      data: Weight(Active(If)),
                      inputs: [
                        (Port(
                          node: NodeIndex(2),
                          index: PortIndex(0),
                        ), Strong),
                        (Port(
                          node: NodeIndex(7),
                          index: PortIndex(0),
                        ), Strong),
                        (Port(
                          node: NodeIndex(6),
                          index: PortIndex(0),
                        ), Strong),
                      ],
                      outputs: [
                        {
                          Port(
                            node: NodeIndex(9),
                            index: PortIndex(0),
                          ): Strong,
                        },
                      ],
                    ),
                    9: NodeInfo(
                      data: Output,
                      inputs: [
                        (Port(
                          node: NodeIndex(8),
                          index: PortIndex(0),
                        ), Strong),
                      ],
                      outputs: [],
                    ),
                  },
                ),
              ),
              inputs: [
                (Port(
                  node: NodeIndex(0),
                  index: PortIndex(0),
                ), Strong),
              ],
              outputs: [
                {
                  Port(
                    node: NodeIndex(2),
                    index: PortIndex(0),
                  ): Strong,
                },
              ],
            ),
            2: NodeInfo(
              data: Weight(Passive(Lambda)),
              inputs: [
                (Port(
                  node: NodeIndex(1),
                  index: PortIndex(0),
                ), Strong),
              ],
              outputs: [
                {
                  Port(
                    node: NodeIndex(3),
                    index: PortIndex(0),
                  ): Strong,
                },
              ],
            ),
            3: NodeInfo(
              data: Output,
              inputs: [
                (Port(
                  node: NodeIndex(2),
                  index: PortIndex(0),
                ), Strong),
              ],
              outputs: [],
            ),
          },
        ),
      ),
      inputs: [],
      outputs: [
        {
          Port(
            node: NodeIndex(2),
            index: PortIndex(0),
          ): Strong,
        },
      ],
    ),
    2: NodeInfo(
      data: Weight(Active(Rec)),
      inputs: [
        (Port(
          node: NodeIndex(1),
          index: PortIndex(0),
        ), Strong),
      ],
      outputs: [
        {
          Port(
            node: NodeIndex(4),
            index: PortIndex(0),
          ): Strong,
        },
      ],
    ),
    3: NodeInfo(
      data: Weight(Passive(Int(5))),
      inputs: [],
      outputs: [
        {
          Port(
            node: NodeIndex(4),
            index: PortIndex(1),
          ): Strong,
        },
      ],
    ),
    4: NodeInfo(
      data: Weight(Active(App)),
      inputs: [
        (Port(
          node: NodeIndex(2),
          index: PortIndex(0),
        ), Strong),
        (Port(
          node: NodeIndex(3),
          index: PortIndex(0),
        ), Strong),
      ],
      outputs: [
        {
          Port(
            node: NodeIndex(5),
            index: PortIndex(0),
          ): Strong,
        },
      ],
    ),
    5: NodeInfo(
      data: Output,
      inputs: [
        (Port(
          node: NodeIndex(4),
          index: PortIndex(0),
        ), Strong),
      ],
      outputs: [],
    ),
  },
)
