sd-core/src/snapshots/sd_core__graph__tests__free_vars.snap
---
source: sd-core/src/graph.rs
expression: graph
---
Hypergraph(
  nodes: {
    0: NodeInfo(
      data: Input,
      inputs: [],
      outputs: [
        {},
        {
          Port(
            node: NodeIndex(1),
            index: PortIndex(0),
          ): Strong,
        },
      ],
    ),
    1: NodeInfo(
      data: Output,
      inputs: [
        (Port(
          node: NodeIndex(0),
          index: PortIndex(1),
        ), Strong),
      ],
      outputs: [],
    ),
  },
)
